# AMAT

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  test_orekit.py
compiler/: cli.py  hashing.py  reference_frames.py  visualization.py
compiler/artifacts/: bundle.py  manifest.py
compiler/backends/: capabilities.py  registry.py
compiler/dependencies/: spice.py
compiler/ir/: backend_spec.py  canonicalize.py  defaults.py
compiler/runtime/: run_python.py
compiler/validation/: validate_bounds.py  validate_dependencies.py  validate_frames.py  validate_schema.py  validate_units.py
docs/: mission_spec_reference.md  pipeline.md  targeting.md
examples/LEO_to_GEO/: mission_spec.json  (+2 more)
mission_compiler/: __init__.py  cli.py  errors.py  io.py  time_formats.py  visualization.py
mission_optimization/: cli.py  domain.py  errors.py
mission_targeting/: __init__.py  cislunar.py  cli.py  closed_loop.py  conic_chain.py  constants.py  errors.py  io.py  patched_conics.py  patched_conics_correction.py  service.py  targeting_policy.py
mission_visualizer/: cli.py  ground_track_loader.py  models.py  plotly_renderer.py  report_writer.py  scene_builder.py  three_renderer.py
optimizer/: __init__.py  cli.py  io.py  service.py
schemas/: artifact_manifest.schema.json  compile_result.schema.json  mission_spec.schema.json  normalized_ephemeris_response.schema.json  spice_ephemeris_request.schema.json  target_problem.schema.json  targeting_result.schema.json  validation_report.schema.json  visualization_manifest.schema.json
targeter/: __init__.py  cli.py  conic_chain.py  constants.py  execution.py  lambert.py  patched_conics.py  service.py  stm_correction.py  targeting_policy.py
visualizer/: discovery.py  ephemeris_loader.py  frame_resolver.py  gmat_report_parser.py  plotly_renderer.py  report_writer.py  scene_builder.py  three_renderer.py
visualzer/: __init__.py  checkpoint_loader.py  discovery.py  ephemeris_loader.py  gmat_report_parser.py  plotly_renderer.py  three_renderer.py
(+110 files in other folders)
